[project]
name = "shortener-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiosqlite>=0.20.0",
    "asyncpg>=0.30.0",
    "fastapi==0.75.0",
    "ipython>=8.31.0",
    "python-dotenv==0.19.2",
    "sqlalchemy",
    "uvicorn==0.17.6",
    "validators>=0.34.0",
]
